--- a/frontend/frontend/Dockerfile
+++ b/frontend/frontend/Dockerfile
@@ -1,13 +1,15 @@
-FROM node:18
-
+# Build stage
+FROM node:14-alpine as builder
 WORKDIR /app
-
 COPY package*.json ./
-RUN npm ci --ignore-optional
-RUN npm install -g vite
-
+RUN npm install
 COPY . .
+RUN npm run build
+
+# Production stage
+FROM nginx:1.19-alpine
+COPY --from=builder /app/dist /usr/share/nginx/html
+COPY default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 5174
-
-CMD ["npm", "run", "dev"]
+CMD ["nginx", "-g", "daemon off;"]
