--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -4,34 +4,29 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-<<<<<<< HEAD
     "axios": "^1.7.7",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.0"
-=======
-    "axios": "^1.7.3",
-    "jwt-decode": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.26.0"
->>>>>>> 590bb7163fc7ab4ed237fc36a924efefe41824cf
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
-  }
+  "@types/react": "^18.2.66",
+  "@types/react-dom": "^18.2.22",
+  "@vitejs/plugin-react": "^4.2.1",
+  "eslint": "^8.57.0",
+  "eslint-plugin-react": "^7.34.1",
+  "eslint-plugin-react-hooks": "^4.6.0",
+  "eslint-plugin-react-refresh": "^0.4.6",
+  "vite": "^5.2.0",
+  "@rollup/plugin-commonjs": "^24.0.0",
+  "@rollup/plugin-node-resolve": "^15.0.0"
+}
+
 }
