--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,38 @@
 version: '3'
 services:
   backend:
-    image: vansh41104/djangoreact-backend
+    build:
+      context: ./backend/notes
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
+    volumes:
+      - ./backend/notes:/app
     depends_on:
       - db
 
   frontend:
-    image: vansh41104/djangoreact-frontend
+    build:
+      context: ./frontend/frontend
+      dockerfile: Dockerfile
     ports:
       - "5174:5174"
+    volumes:
+      - ./frontend/frontend:/app
     environment:
       - REACT_APP_BACKEND_URL=http://localhost:8000
 
   db:
-    image: vansh41104/djangoreact-postgres
+    image: postgres:13
     environment:
       POSTGRES_DB: django
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 6104
     ports:
-      - "5433:5432"
+      - "5433:5432"  # Use host port 5433 instead of 5432
     volumes:
       - postgres-data:/var/lib/postgresql/data
+
 
 volumes:
   postgres-data:
